# bootstrap

./: CMakeLists.txt  main.c
collections/: arraylist.c  arraylist.h
template_engine/: replacements.c  replacements.h  template_engine.c  template_engine.h
text/: read_file.c  read_file.h  text_result.h
text_buffer/: text_buffer.c  text_buffer.h
